# new-caledonia-maps

./: .gitignore  Dockerfile.potrace  Makefile  README.md  pyproject.toml
data/: borders.osm  color-relief-dark.txt  color-relief-light.txt  preview.osm
new_caledonia_maps/: flag_annotation.py  map_scale.py  orthographic.py  overview.py  overview_hillshade.py  panama.py  panama_hillshade.py  preview.py  preview_hillshade.py  world.py
