[tool.poetry]
name = "new-caledonia-maps"
version = "0.0.0"
description = ""
authors = ["Leif Gehrmann <leif.gehrmann@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pyproj = "^3.5.0"
Shapely = "^2.0.1"
click = "^8.1.3"
pyshp = "^2.3.1"
pangocairocffi = "^0.7.0"
map-engraver = {git = "https://github.com/leifgehrmann/map-engraver.git"}
gdal = "3.6.2"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
